# foxterm

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md
.cmake/: add_dependency.cmake
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  base_demo.cpp
foxterm/: CMakeLists.txt  color.cpp  color.hpp  color_auto.cpp  color_auto.hpp  convert.cpp  convert.hpp  manipulate.cpp  manipulate.hpp  style.cpp  style.hpp
foxterm-old/: color.hpp  color_auto.cpp  color_auto.hpp  convert.cpp  convert.hpp  info.hpp.in  manipulate.cpp  manipulate.hpp  style.hpp
test/: CMakeLists.txt  base_test.cpp  color_auto_test.cpp  color_test.cpp  convert_test.cpp  manipulate_test.cpp  style_test.cpp
